--- a/Invitation/Views/Shared/_Layout.cshtml
+++ b/Invitation/Views/Shared/_Layout.cshtml
@@ -1,71 +1,236 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Invitation</title>
+<html lang="en">
 
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
+<head>
+    <!-- Meta -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="HTML, CSS, JS, Template">
+    <meta name="author" content="Revol Themes">
+    <title>Artem weds Melodie</title>
+    <!-- Favicons -->
+    <link rel="icon" href="~/images/love.JPG">
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css?family=Rouge+Script|Open+Sans:400,600,700" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=HarryP:300,400,400i,600,700,800" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Normalization -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <!-- Custom CSS -->
+    <link href="css/site.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+
+<body data-spy="scroll" data-target=".navbar" data-offset="56">
+    <!-- Navigation Menu -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-toggleable-md bg-white">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Invitation</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="fa fa-navicon fa-lg"></span>
+            </button>
+            <a class="smoothscroll navbar-brand" href="#home"><img src="~/images/love.JPG" alt="logo"></a>
+            <div class="collapse navbar-collapse flex-row-reverse" id="mainNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="smoothscroll nav-link" href="#home">home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="smoothscroll nav-link" href="#about">about us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="smoothscroll nav-link" href="#history">our history</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="smoothscroll nav-link" href="#gallery">photo gellary</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="smoothscroll nav-link" href="#people">peoples</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="smoothscroll nav-link" href="#friend">friends wishes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="smoothscroll nav-link" href="#blog">blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="smoothscroll nav-link" href="#contact">contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2018 - Invitation</p>
-        </footer>
+
+
+    <!-- Slider -->
+    <div id="home"></div>
+    <div class="main-slider">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
+                </li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="slider-image" src="~/images/viaduct.jpg" alt="First slide">
+                    <div class="carousel-caption">
+                        <div class="underlay"></div>
+                        <div class="content">
+                            <img class="slider-content" src="~/images/slider_content.png" />
+                            <p>
+                                "Where your treasure is, there will your heart be also" -
+                                Albus Dumbledore
+                            </p>
+                            <a href="#about" class="smoothscroll btn btn-light">about us</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="slider-image" src="~/images/dance.jpg" alt="Second slide">
+                    <div class="carousel-caption ">
+                        <div class="underlay"></div>
+                        <div class="content">
+                            <img class="slider-content" src="~/images/slider_content.png" />
+                            <p>
+                                "Differences of habit and language are nothing at all if our aims are identical and our hearts are open."
+                                — Albus Dumbledore
+                            </p>
+                            <a href="#about" class="smoothscroll btn btn-light">about us</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="slider-image" src="~/images/love.jpg" alt="Third slide">
+                    <div class="carousel-caption ">
+                        <div class="underlay"></div>
+                        <div class="content">
+                            <img class="slider-content" src="~/images/slider_content.png" />
+                            <p>
+                                "After all this time?" "Always"
+                            </p>
+                            <a href="#about" class="smoothscroll btn btn-light">about us</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+                -->
+        </div>
     </div>
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
+    <!-- Counter -->
+    <section class="counter">
+        <div class="container">
+            <div class="row text-center individual">
+                <div class="col-3 wow tada">
+                    <img src="~/images/gryffindor-shield.jpg" alt="Counter Background Gryffindor Crest">
+                    <h1 id="days"></h1>
+                    <h5>Days</h5>
+                </div>
+                <div class="col-3 wow tada">
+                    <img src="~/images/Slytherin.jpg" alt="Counter Background Slytherin Crest">
+                    <h1 id="hours"></h1>
+                    <h5>Hours</h5>
+                </div>
+                <div class="col-3 wow tada">
+                    <img src="~/images/Hufflepuff.jpg" alt="Counter Background Hufflepuff Crest">
+                    <h1 id="minutes"></h1>
+                    <h5>Minutes</h5>
+                </div>
+                <div class="col-3 wow tada">
+                    <img src="~/images/Ravenclaw.jpg" alt="Counter Background Ravenclaw Crest">
+                    <h1 id="seconds"></h1>
+                    <h5>Seconds</h5>
+                </div>
+            </div>
+            <div class="row text-center allInOne">
+                <div class="col-12 wow tada">
+                    <img src="~/images/count-number-bg.png" alt="Counter Background">
+                    <h1 id="all"></h1>
+                    <h5>D : H : M : S</h5>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    @RenderSection("Scripts", required: false)
+    <!-- Google Map -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233668.3870397137!2d90.2792381917259!3d23.780573256485233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e0!3m2!1sen!2sbd!4v1513666665101"
+            height="540" frameborder="0" style="border:0;width:100%" allowfullscreen></iframe>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row justify-content-center footer-menu">
+                <div class="col col-sm-12">
+                    <ul class="list-inline text-center">
+                        <li class="list-inline-item wow fadeIn" data-wow-delay="0.7s">
+                            <a class="smoothscroll" href="#home">home</a>
+                        </li>
+                        <li class="list-inline-item wow fadeIn" data-wow-delay="0.6s">
+                            <a class="smoothscroll" href="#about">about us</a>
+                        </li>
+                        <li class="list-inline-item wow fadeIn" data-wow-delay="0.5s">
+                            <a class="smoothscroll" href="#history">our history</a>
+                        </li>
+                        <li class="list-inline-item wow fadeIn" data-wow-delay="0.4s">
+                            <a class="smoothscroll" href="#gallery">photo gellary</a>
+                        </li>
+                        <li class="list-inline-item wow fadeIn" data-wow-delay="0.3s">
+                            <a class="smoothscroll" href="#people">peoples</a>
+                        </li>
+                        <li class="list-inline-item wow fadeIn" data-wow-delay="0.2s">
+                            <a class="smoothscroll" href="#friend">friends wishes</a>
+                        </li>
+                        <li class="list-inline-item wow fadeIn" data-wow-delay="0.1s">
+                            <a class="smoothscroll" href="#blog">blog</a>
+                        </li>
+                        <li class="list-inline-item wow fadeIn">
+                            <a class="smoothscroll" href="#contact">contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col col-sm-12">
+                    <div class="social">
+                        <ul class="list-inline text-center">
+                            <li class="list-inline-item wow fadeIn"><i class="fa fa-facebook fa-lg icon" aria-hidden="true"></i></li>
+                            <li class="list-inline-item wow fadeIn" data-wow-delay="0.1s"><i class="fa fa-twitter fa-lg icon" aria-hidden="true"></i></li>
+                            <li class="list-inline-item wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-linkedin fa-lg icon" aria-hidden="true"></i></li>
+                            <li class="list-inline-item wow fadeIn" data-wow-delay="0.3s"><i class="fa fa-behance fa-lg icon" aria-hidden="true"></i></li>
+                            <li class="list-inline-item wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-dribbble fa-lg icon" aria-hidden="true"></i></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright-section">
+                <p class="text-center">&copy; 2018 all rights reserved</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script src="js/jquery.mixitup.min.js"></script>
+    <script src="js/script.js"></script>
+    @RenderBody()
 </body>
+
 </html>
